<resources>
    <string name="app_name">ECommand</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="enter">ENTRAR</string>
    <string name="welcome">Bem-vindo,</string>
    <string name="dont_have_count">Não tem conta?</string>
    <string name="register_now">cadastrar agora</string>
    <string name="register">Cadastrar </string>
    <string name="name">Nome</string>
    <string name="have_count">Você tem conta?</string>
    <string name="choose_options">"O que você deseja fazer? "</string>
    <string name="add_item">Adicionar Item</string>
    <string name="name_use">Olá, Usuário</string>
    <string name="pay">Pagamento</string>
    <string name="prorate">Ratear item</string>
    <string name="increase_item">Acrescentar item</string>
    <string name="welcome_home">Seja bem vindo</string>
    <string name="order">Pedidos</string>
    <string name="quantity">Qtd :</string>
    <string name="zero">R$ 0,00</string>
    <string name="zero_qtd">0</string>
    <string name="amount">Total:</string>
    <string name="items">%d itens</string>
    <string name="last_orders">Últimos pedidos</string>
    <string name="description">Descrição</string>
    <string name="pf">Prato Feito</string>
    <string name="date">00/00/000</string>
    <string name="not_order">Não há pedidos</string>
    <string name="generete_qrcode">Gerar QrCode</string>
    <string name="employee">Estabelecimento</string>
    <string name="close_count">Fechar conta</string>
    <string name="position_qr_code">Posiocione o Qr code no centro</string>
    <string name="value">Valor</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Adicionar</string>
    <string name="add_item_label">Adicione os itens</string>
    <string name="isClient">Cliente ?</string>
    <string name="icon">icon</string>


</resources>
