<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/command_white_ge"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:background="@drawable/background_login"
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_restaurant_white" />

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/app_name"
                android:textColor="@color/command_white"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/textView_dialog_label"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/add_item_label"
            android:textColor="@color/command_red"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_dialog_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_value_dialog"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/outlinedTextField_value_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/outlinedTextField_value_dialog">

            <Button
                android:id="@+id/outlinedButton_more"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:icon="@drawable/ic_add_circle" />

            <TextView
                android:id="@+id/textView_dialog_input_quantity"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/zero_qtd"
                android:textColor="@color/command_red_dark"
                android:textSize="20sp" />

            <Button
                android:id="@+id/outlinedButton_less"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:icon="@drawable/ic_remove_circle_outline" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_value_dialog">

            <Button
                android:id="@+id/outlinedButton_cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="20dp"
                android:text="@string/cancel"
                android:textColor="@color/command_red" />

            <Button
                android:id="@+id/outlinedButton_save"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/add"
                android:textColor="@color/command_red" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>