<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/command_white_ge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.LoginFragment">

  <LinearLayout
      android:orientation="vertical"
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="400dp"
      android:background="@drawable/background_login"
      android:gravity="center_horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

  </LinearLayout>

  <ImageView
      android:layout_width="90dp"
      android:layout_height="90dp"
      android:layout_marginTop="50dp"
      android:src="@drawable/ic_account_circle_white_24dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="36dp"
      android:layout_marginTop="175dp"
      android:fontFamily="sans-serif-black"
      android:text="@string/welcome"
      android:textColor="@color/command_white"
      android:textSize="30sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


  <androidx.cardview.widget.CardView
      android:id="@+id/cardView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="40dp"
      app:cardCornerRadius="5dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/text_field_email"
          app:endIconMode="custom"
          app:endIconDrawable="@drawable/ic_email_black_24dp"
          app:endIconTint="@color/command_red"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="32dp"
          android:layout_marginTop="32dp"
          android:layout_marginEnd="32dp"
          android:hint="@string/email"
          app:layout_constraintEnd_toStartOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput_email_user"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/text_field_password"
          app:endIconTint="@color/command_red"
          app:endIconMode="password_toggle"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="32dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="32dp"
          android:hint="@string/password"
          app:layout_constraintEnd_toStartOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/text_field_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

      </com.google.android.material.textfield.TextInputLayout>

      <Button
          android:id="@+id/button_login"
          android:layout_width="280dp"
          android:layout_height="60dp"
          android:layout_marginStart="32dp"
          android:layout_marginTop="32dp"
          android:layout_marginEnd="32dp"
          android:layout_marginBottom="32dp"
          android:text="@string/enter"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/text_field_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>


  </androidx.cardview.widget.CardView>

  <LinearLayout
      android:gravity="center"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginBottom="40dp"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/dont_have_count" />

    <TextView
        android:id="@+id/textView_register"
        android:textColor="@color/command_red"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register" />
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>