<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.ListItemsFragment">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/background_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_name_employee_list"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/employee"
        android:textColor="@color/command_white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:text="@string/welcome_home"
        android:textColor="@color/command_white_ge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name_employee_list" />

    <TextView
        android:id="@+id/textView_order"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:text="@string/order"
        android:textColor="@color/command_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/linearLayout_items"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_order">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_orders_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:visibility="visible"
            tools:listitem="@layout/item_order" />

        <androidx.cardview.widget.CardView
            android:layout_marginTop="120dp"
            android:id="@+id/cardView_not_found_input"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_error_red_24dp" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="172dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:text="@string/not_order"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:visibility="visible"
        android:id="@+id/outlinedButton_finish_count"
        app:icon="@drawable/ic_money_red_24dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_items" />

</androidx.constraintlayout.widget.ConstraintLayout>